--- a/about.html
+++ b/about.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Developer</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Roger Rodriguez</h1>
+    <div id="wrapper">
+        <img src="rog.png" alt="Image of Roger" class="me">
+        <h1>Roger</h1>
 
-    <h2>Software Engineer</h2>
+        <h2>Software Engineer</h2>
 
-    <p>
-        I’m an active user of Javascript and Ruby. I teach and use Object Oriented Programming principles but also appreciate functional programming. My favorite frameworks are ROR and Express. In my projects as a backend developer i follow an MVC design approach.
-    </p>
+        <p>
+            I’m an active user of Javascript and Ruby. I teach and use Object Oriented Programming principles but also appreciate functional programming. My favorite frameworks are ROR and Express. In my projects as a backend developer i follow an MVC design approach.
+        </p>
+    </div>
 </body>
 </html>
