added finishing touches to about page

--- a/about.html
+++ b/about.html
@@ -11,10 +11,13 @@
 <body>
     <div id="wrapper">
         <img src="rog.png" alt="Image of Roger" class="me">
+        
         <h1>Roger</h1>
 
         <h2>Software Engineer</h2>
 
+        <hr class="grey">
+        
         <p>
             I’m an active user of Javascript and Ruby. I teach and use Object Oriented Programming principles but also appreciate functional programming. My favorite frameworks are ROR and Express. In my projects as a backend developer i follow an MVC design approach.
         </p>
